# JumaRE_Project

./: .gitignore  .gitmodules  CMakeLists.txt  JumaRE.sln  JumaRE.sln.DotSettings  jutils.props
JumaEngine/: JumaEngine.vcxproj  JumaEngine.vcxproj.filters
JumaEngineEditor/: JumaEngineEditor.vcxproj  JumaEngineEditor.vcxproj.filters
JumaRE/: JumaRE.vcxproj  JumaRE.vcxproj.filters
JumaRE_Test/: JumaRE_Test.vcxproj  JumaRE_Test.vcxproj.filters  TestApp.cpp  TestApp.h  TestAppGameInstance.cpp  TestAppGameInstance.h  TestApp_JE.cpp  TestApp_JE.h  TestApp_JRE.cpp  TestApp_JRE.h  main.cpp
JumaRE_Test/content/: cursor2D.frag  cursor2D.frag.spv  cursor2D.json  cursor2D.vert  cursor2D.vert.hlsl  cursor2D.vert.spv  position2DtoColor.frag  position2DtoColor.frag.spv  position2DtoColor.vert.hlsl  shaderGenerateMips.comp.hlsl  texture.vert.spv  textureUnmodified.frag  textureUnmodified.frag.hlsl  textureUnmodified.frag.spv  textureUnmodified.json  textureUnmodified.vert  textureUnmodified.vert.hlsl  textureUnmodified.vert.spv
JumaRE_Test/content/shaders/: .gitignore  compile_all.js  cursor2D.frag  cursor2D.frag.hlsl  cursor2D.json  cursor2D.vert  cursor2D.vert.hlsl  cursor2D.vert.spv  position2DtoColor.frag.hlsl  position2DtoColor.vert  position2DtoColor.vert.spv  position3D.frag  position3D.frag.hlsl  position3D.frag.spv  position3D.json  texture.frag  (+14 more)
jutils/: jutils.vcxproj  jutils.vcxproj.filters
lib/: .gitignore  GLEW.props  GLFW.props  JumaRE_DX.props  JumaRE_DX11.props  JumaRE_DX12.props  JumaRE_OpenGL.props  JumaRE_Vulkan.props  fmt.props  jutils.props  libs.props
(+1 files in other folders)
